--- a/AleynaBlog/Views/AuthorAdmin/Create.cshtml
+++ b/AleynaBlog/Views/AuthorAdmin/Create.cshtml
@@ -21,7 +21,8 @@
                     </ul>
                 </div>
                 <div class="body">
-                    <form>
+                    @using (Html.BeginForm("Create", "AuthorAdmin", FormMethod.Post, new { enctype = "multipart/form-data" }))
+                    {
                         @*<-----------------------Yazar Resmi------------------------>*@
                         <label for="image">Yazar Resmi</label>
                         <div class="form-group">
@@ -35,7 +36,7 @@
                         <div class="form-group">
                             <div class="form-line">
 
-                                @Html.EditorFor(model => model.NameSurname, new {htmlAttributes = new { @class ="form-conrol", @maxlenght = "50", @required = "reguired" }})
+                                @Html.EditorFor(model => model.NameSurname, new { htmlAttributes = new { @class = "form-conrol", @maxlenght = "50", @required = "reguired" } })
 
                             </div>
                         </div>
@@ -66,20 +67,23 @@
                                 @*<input type="password" id="password" class="form-control" placeholder="Enter your password">*@
                             </div>
                         </div>
-                   
+
                         @*-------------Admin mi degil mi checkbox-------------------*@
-                    <div class="form-group">
-                        @Html.RadioButton("Role", "Admin", new { @checked = true, @id = "admin" })
-                        @*<input type="radio" name="gender" id="male" class="with-gap">*@
-                        <label for="admin">Admin</label>
-                        @Html.RadioButton("Role", "Admin", new { @id = "user" })
-                        <input type="radio" name="gender" id="female" class="with-gap">
-                        <label for="user" class="m-l-20">Kullanıcı</label>
-                    </div>
+                        <div class="form-group">
+                            @Html.RadioButton("Role", "Admin", new { @checked = true, @id = "admin" })
+                            @*<input type="radio" name="gender" id="male" class="with-gap">*@
+                            <label for="admin">Admin</label>
+                            @Html.RadioButton("Role", "Admin", new { @id = "user" })
+                            <input type="radio" name="gender" id="female" class="with-gap">
+                            <label for="user" class="m-l-20">Kullanıcı</label>
+                        </div>
                         @*<----------------------------------->*@
                         <br>
-                        <button type="button" class="btn btn-primary m-t-15 waves-effect">LOGIN</button>
-                    </form>
+                        <div align="center">
+                            <input type="submit" class="btn btn-success m-t-15 waves-effect" value="Yazar Kaydet">
+                        </div>
+
+                    }
                 </div>
             </div>
         </div>
