--- a/AleynaBlog/Views/AuthorAdmin/Index.cshtml
+++ b/AleynaBlog/Views/AuthorAdmin/Index.cshtml
@@ -51,15 +51,15 @@
                                 </td>
 
                                 <td>
-                                    <a class="btn bg-cyan waves-effect" id="detail" data-toggle="tooltip" data-placement="top" title="" data-original-title="Detayı Gör" 
-                                          href="@Url.Action("Details", "AuthorAdmin" , new {id=item.Id })')">
-                                    <i class="material-icons"> folder</i>
-                                    </a>
+                                    <span class="btn bg-cyan waves-effect" id="detail" data-toggle="tooltip" data-placement="top" title="" data-original-title="Detayı Gör"
+                                          onclick="createModel('@Url.Action("Details", "AuthorAdmin" , new {id=item.Id })')">
+                                        <i class="material-icons"> folder</i>
+                                    </span>
 
                                     <a class="btn bg-purple waves-effect" data-toggle="tooltip" data-placement="top" title="" data-original-title="Düzenle"
                                        href="@Url.Action("Edit", "AuthorAdmin" , new {id=item.Id })">  <i class="material-icons">mode_edit</i></a>
 
-                                    <a class="btn bg-purple waves-effect"   data-target="#deleteAuthor" data-toggle="tooltip" data-placement="top" title="" data-original-title="Sil"
+                                    <a class="btn bg-purple waves-effect" data-target="#deleteAuthor" data-toggle="tooltip" data-placement="top" title="" data-original-title="Sil"
                                        onclick="JavaSend(@item.Id)"> <i class="material-icons">mode_edit</i></a>
 
                                     @*<a class="btn bg-red waves-effect" data-target="#deleteAuthor" data-toggle="tooltip" data-placement="top" title="" data-original-title="Sil" onclick="JavaSend(@item.Id)">  <i class="material-icons">delete</i></a>*@
@@ -88,14 +88,25 @@
         </div>
     </div>
 </div>
+<!-- Modal -->
+<div id="myModal" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+
+        <!-- Modal content-->
+        <div class="modal-content",id="modalContent",style="top:50px">
+         
+        </div>
+
+    </div>
+</div>
 <script src="~/Content/Site/js/jquery.js"></script>
 
-@*<script>
-    function createModal(url) {
-        $('#modelContent').load(url);
-        $('#myModal').modal('show');
-    }
-</script>*@
+<script>
+        function createModel(url) {
+            $('#modelContent').load(url);
+            $('#myModal').modal('show');
+        }
+    </script>
 <!-- Modal -->
 <div class="modal fade" id="deleteAuthor" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
