--- a/AleynaBlog/Views/Shared/_LeftsideBar.cshtml
+++ b/AleynaBlog/Views/Shared/_LeftsideBar.cshtml
@@ -11,11 +11,11 @@
                 <i class="material-icons" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">keyboard_arrow_down</i>
                 <ul class="dropdown-menu pull-right">
                     <li><a href="javascript:void(0);"><i class="material-icons">person</i>Profile</a></li>
-                    <li role="seperator" class="divider"></li>
+                    @*<li role="seperator" class="divider"></li>*@
                     <li><a href="javascript:void(0);"><i class="material-icons">group</i>Followers</a></li>
                     <li><a href="javascript:void(0);"><i class="material-icons">shopping_cart</i>Sales</a></li>
                     <li><a href="javascript:void(0);"><i class="material-icons">favorite</i>Likes</a></li>
-                    <li role="seperator" class="divider"></li>
+                    @*<li role="seperator" class="divider"></li>*@
                     <li><a href="javascript:void(0);"><i class="material-icons">input</i>Sign Out</a></li>
                 </ul>
             </div>
@@ -25,31 +25,12 @@
     <!-- Menu -->
     <div class="menu">
         <ul class="list">
-            <li class="header">MAIN NAVIGATION</li>
+            <li class="header">Ana Menü</li>
             <li class="active">
                 <a href="index.html">
                     <i class="material-icons">home</i>
                     <span>Home</span>
                 </a>
-            </li>
-            <li>
-                <a href="pages/typography.html">
-                    <i class="material-icons">text_fields</i>
-                    <span>Typography</span>
-                </a>
-            </li>
-            <li>
-                <a href="pages/helper-classes.html">
-                    <i class="material-icons">layers</i>
-                    <span>Helper Classes</span>
-                </a>
-            </li>
-            <li>
-                <a href="javascript:void(0);" class="menu-toggle">
-                    <i class="material-icons">widgets</i>
-                    <span>Widgets</span>
-                </a>
-
             </li>
 
             <li>
@@ -111,10 +92,10 @@
                 </a>
                 <ul class="ml-menu">
                     <li>
-                        <a href="pages/examples/sign-in.html">Sign In</a>
+                        <a href="pages/examples/sign-in.html">Giriş Yap</a>
                     </li>
                     <li>
-                        <a href="pages/examples/sign-up.html">Sign Up</a>
+                        <a href="pages/examples/sign-up.html">Kayıt Ol</a>
                     </li>
                     <li>
                         <a href="pages/examples/forgot-password.html">Forgot Password</a>
@@ -130,23 +111,7 @@
                     </li>
                 </ul>
             </li>
-            <li>
-                <a href="javascript:void(0);" class="menu-toggle">
-                    <i class="material-icons">map</i>
-                    <span>Maps</span>
-                </a>
-                <ul class="ml-menu">
-                    <li>
-                        <a href="pages/maps/google.html">Google Map</a>
-                    </li>
-                    <li>
-                        <a href="pages/maps/yandex.html">YandexMap</a>
-                    </li>
-                    <li>
-                        <a href="pages/maps/jvectormap.html">jVectorMap</a>
-                    </li>
-                </ul>
-            </li>
+                            
             <li>
                 <a href="javascript:void(0);" class="menu-toggle">
                     <i class="material-icons">trending_down</i>
@@ -216,15 +181,5 @@
             </li>
         </ul>
     </div>
-    <!-- #Menu -->
-    <!-- Footer -->
-    <div class="legal">
-        <div class="copyright">
-            &copy; 2016 - 2017 <a href="javascript:void(0);">AdminBSB - Material Design</a>.
-        </div>
-        <div class="version">
-            <b>Version: </b> 1.0.5
-        </div>
-    </div>
-    <!-- #Footer -->
+    
 </aside>
