--- a/AleynaBlog/Views/Shared/_LayoutPage1.cshtml
+++ b/AleynaBlog/Views/Shared/_LayoutPage1.cshtml
@@ -69,32 +69,20 @@
 
                                     <li class="dropdown">
                                         <a href="@Url.Action("Index","About")">Hakkımda</a>
-                                        @*<ul>
-                                            <li><a href="about.html">About us</a></li>
-                                            <li><a href="team.html">Team</a></li>
-                                            <li><a href="testimonials.html">Testimonials</a></li>
-                                            <li><a href="error.html">404 Page</a></li>
-                                        </ul>*@
+                                       
                                     </li>
 
                                     <li class="dropdown">
-                                        <a href="#">Projelerim</a>
+                                        <a href="@Url.Action("Index","Project")">Projelerim</a>
                                         <ul>
                                             <li><a href="our-projects.html">projects</a></li>
                                             <li><a href="project-single.html">Project Details</a></li>
                                         </ul>
                                     </li>
 
+                                    
                                     <li class="dropdown">
-                                        <a href="#">Servisler</a>
-                                        <ul>
-                                            <li><a href="service.html">Services</a></li>
-                                            <li><a href="service-single.html">Service Details</a></li>
-                                        </ul>
-                                    </li>
-
-                                    <li class="dropdown">
-                                        <a href="#">Blog</a>
+                                        <a href="@Url.Action("Index","Blog")">Blog</a>
                                         <ul>
                                             <li><a href="blog-grid.html">News Grid</a></li>
                                             <li><a href="blog-large.html">News Classic</a></li>
@@ -130,16 +118,16 @@
                                         </ul>
                                     </li>
 
-                                    <li class="dropdown">
+                                    @*<li class="dropdown">
                                         <a href="#">Servisler</a>
                                         <ul>
                                             <li><a href="service.html">Services</a></li>
                                             <li><a href="service-single.html">Service Details</a></li>
                                         </ul>
-                                    </li>
+                                    </li>*@
 
                                     <li class="dropdown">
-                                        <a href="#">Blog</a>
+                                        <a href="@Url.Action("Index","Blog")">Blog</a>
                                         <ul>
                                             <li><a href="blog-grid.html">News Grid</a></li>
                                             <li><a href="blog-large.html">News Classic</a></li>
