--- a/AleynaBlog/Views/Home/About.cshtml
+++ b/AleynaBlog/Views/Home/About.cshtml
@@ -7,9 +7,15 @@
                 <div class="inner-box wow fadeInLeft" data-wow-delay="0ms" data-wow-duration="1500ms">
                     <!--Section Title-->
                     <div class="sec-title">
-                        <h2>About <span>Narail</span></h2>
+                        <h2>Hakkımda </h2>
                     </div>
-                    <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elitsed do eiusmod tempor incididunt ut labore et dolore magna aliqua Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commo do consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla paria tur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum </div>
+                    <div class="text">
+                        Merhabalar, ben Karadeniz Teknik Üniversitesi Bilgisayar Mühendisliği bölümüne 2015 yılında başladım.
+                        Bir sene hazırlık okuduktan sonra bu dönem  2020 yılında mezun oldum, eğitim hayatım boyunca çok fazla proje geliştirdim,
+                        bu süreçte  C, C++, Java, PHP, HTML, CSS, SQL, MATLAB ve Python dillerini kullandım. Şu sıralar Android Mobil uygulama ve asp.net ile MVC
+                        projeler geliştirmekteyim. Aktif iş arayışındayım ve kendimi yazılım konusunda daha da geliştirmek
+                        istiyorum. Takım çalışmalarına kolaylıkla adapte olabileceğime inanıyorum ve backend kısmında kendime güveniyorum.
+                    </div>
                     <div class="link-btn"><a href="about.html" class="btn-style-two">Learn More <span class="fa fa-long-arrow-right"></span></a></div>
                 </div>
             </div>
@@ -28,9 +34,15 @@
                 <div class="inner-box wow fadeInLeft" data-wow-delay="0ms" data-wow-duration="1500ms">
                     <!--Section Title-->
                     <div class="sec-title">
-                        <h2>About <span>Narail</span></h2>
+                        <h2>Hakkımda </h2>
                     </div>
-                    <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elitsed do eiusmod tempor incididunt ut labore et dolore magna aliqua Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commo do consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla paria tur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum </div>
+                    <div class="text">
+                        Merhabalar, ben Karadeniz Teknik Üniversitesi Bilgisayar Mühendisliği bölümüne 2015 yılında başladım.
+                        Bir sene hazırlık okuduktan sonra bu dönem  2020 yılında mezun oldum, eğitim hayatım boyunca çok fazla proje geliştirdim,
+                        bu süreçte  C, C++, Java, PHP, HTML, CSS, SQL, MATLAB ve Python dillerini kullandım. Şu sıralar Android Mobil uygulama ve asp.net ile MVC
+                        projeler geliştirmekteyim. Aktif iş arayışındayım ve kendimi yazılım konusunda daha da geliştirmek
+                        istiyorum. Takım çalışmalarına kolaylıkla adapte olabileceğime inanıyorum ve backend kısmında kendime güveniyorum.
+                    </div>
                     <div class="link-btn"><a href="about.html" class="btn-style-two">Learn More <span class="fa fa-long-arrow-right"></span></a></div>
                 </div>
             </div>
