--- a/AleynaBlog/Views/Shared/_LayoutPage1.cshtml
+++ b/AleynaBlog/Views/Shared/_LayoutPage1.cshtml
@@ -70,10 +70,10 @@
 
                                     <li class="dropdown">
                                         <a href="@Url.Action("Index","Project")">Projelerim</a>
-                                        <ul>
+                                        @*<ul>
                                             <li><a href="our-projects.html">projects</a></li>
                                             <li><a href="project-single.html">Project Details</a></li>
-                                        </ul>
+                                        </ul>*@
                                     </li>
 
                                     
@@ -205,8 +205,7 @@
                                         </div>
                                         <div class="widget-content">
                                             <ul class="list">
-                                                <li> <a href="@Url.Action("Index","About")">Hakkımda</a></li>                                              
-                                                <li><a href="team.html">Takım</a></li>
+                                                <li> <a href="@Url.Action("Index","About")">Hakkımda</a></li>                                                                               
                                                 <li> <a href="@Url.Action("Index","Project")">Projeler</a></li>
                                                 <li> <a href="@Url.Action("Index","Blog")">Blog</a></li>
                                                 <li> <a href="@Url.Action("Index","Contact")">İletişim</a></li>
@@ -280,7 +279,7 @@
                     <div class="pull-right get-text">
                         <ul>
                             <li><a href="@Url.Action("Index","About")">Hakkımda</a></li>
-                            <li><a href="#"> Giriş</a></li>
+                            <li><a href="@Url.Action("Index","Login")"> Giriş</a></li>
                         </ul>
                     </div><!-- /.pull-left -->
                 </div><!-- /.container -->
