--- a/AleynaBlog/Views/About/Index.cshtml
+++ b/AleynaBlog/Views/About/Index.cshtml
@@ -7,7 +7,7 @@
     <div class="inner-banner has-base-color-overlay text-center" style="background: url(images/background/1.jpg);">
         <div class="container">
             <div class="box">
-                <h3>About Us</h3>
+                <h3>Hakkımda</h3>
             </div><!-- /.box -->
         </div><!-- /.container -->
     </div>
@@ -40,10 +40,14 @@
             <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
                 <div class="content">
                     <div class="sec-title style-2">
-                        <h2>Who <span>We are</span></h2>
+                        <h2>Hakkımda </h2>
                     </div>
                     <div class="text">
-                        Finibus ante et, imperdiet finibus risus. Donec malesuada luctus elit nec hendrerit. Integer ex sap ien, eleifend sit amet tellus ut, porttitor dictum velit. Nulla scelerisque, nisl eu maximus bibendum nibh risus eleifend.
+                        Merhabalar, ben Karadeniz Teknik Üniversitesi Bilgisayar Mühendisliği bölümüne 2015 yılında başladım.
+                        Bir sene hazırlık okuduktan sonra bu dönem  2020 yılında mezun oldum, eğitim hayatım boyunca çok fazla proje geliştirdim,
+                        bu süreçte  C, C++, Java, PHP, HTML, CSS, SQL, MATLAB ve Python dillerini kullandım. Şu sıralar Android Mobil uygulama ve asp.net ile MVC
+                        projeler geliştirmekteyim. Aktif iş arayışındayım ve kendimi yazılım konusunda daha da geliştirmek
+                        istiyorum. Takım çalışmalarına kolaylıkla adapte olabileceğime inanıyorum ve backend kısmında kendime güveniyorum.
                     </div>
 
                     <div class="founder clearfix">
@@ -51,13 +55,11 @@
                             <img src="~/Content/Site/images/resource/founder.jpg" alt="Awesome Image">
                         </div>
                         <div class="name">
-                            <h3>Denial Muzad</h3>
-                            <p>Founder &amp; CEO</p>
+                            <h3>Aleyna Karabacakoğlu</h3>
+                            <p> Bilgisayar Mühendisi</p>
                         </div>
                     </div>
-                    <div class="text">
-                        Lorem ipsum dolor sit amet, vix an natum labitur eleifend, mel amet a laorit menandri. Ei justo complectitur duo. Ei mundi solet ut soletu mel possit quo.
-                    </div>
+                    
                 </div>
             </div>
         </div>
