--- a/AleynaBlog/Views/Contact/Index.cshtml
+++ b/AleynaBlog/Views/Contact/Index.cshtml
@@ -100,7 +100,7 @@
                                     <i class="fa fa-phone"></i>
                                 </div><!-- /.icon-box -->
                                 <div class="text-box">
-                                    <p><b>Call Us:</b> <br> +222 4444 88 999</p>
+                                    <p><b>Call Us:</b> <br> 0(544)503 86 39</p>
                                 </div><!-- /.text-box -->
                             </li>
                             <li>
@@ -108,7 +108,8 @@
                                     <i class="fa fa-envelope"></i>
                                 </div><!-- /.icon-box -->
                                 <div class="text-box">
-                                    <p><b>Mail Us:</b> <br> Yourmail@info.com</p>
+                                    <p><b>Mail:</b> <br> <a href="mailto:aleynakarabacakoglu26@hotmail.com">aleynakarabacakoglu26@hotmail.com</a></p>
+                                    
                                 </div>
                             </li>
                         </ul>
