--- a/AleynaBlog/Views/Blog/Detail.cshtml
+++ b/AleynaBlog/Views/Blog/Detail.cshtml
@@ -17,11 +17,9 @@
             <div class="pull-left">
                 <ul class="list-inline link-list">
                     <li>
-                        <a href="index.html">Home</a>
+                        <a href="@Url.Action("Index","Home")">Anasayfa</a>
                     </li>
-                    <li>
-                        <a href="#">news</a>
-                    </li>
+                    
                     <li>
                         news details
                     </li>
@@ -77,9 +75,7 @@
                         </div>
 
 
-                        <!--Comments Area-->
-                        
-
+                        <!--Comments Area-->                       
 
 
                         <div class="add_your_review">
