--- a/AleynaBlog/Views/Home/About.cshtml
+++ b/AleynaBlog/Views/Home/About.cshtml
@@ -16,7 +16,7 @@
                         projeler geliştirmekteyim. Aktif iş arayışındayım ve kendimi yazılım konusunda daha da geliştirmek
                         istiyorum. Takım çalışmalarına kolaylıkla adapte olabileceğime inanıyorum ve backend kısmında kendime güveniyorum.
                     </div>
-                    <div class="link-btn"><a href="about.html" class="btn-style-two">Learn More <span class="fa fa-long-arrow-right"></span></a></div>
+                    <div class="link-btn"><a href="about.html" class="btn-style-two">Daha Fazla Oku <span class="fa fa-long-arrow-right"></span></a></div>
                 </div>
             </div>
         </div>
@@ -43,7 +43,7 @@
                         projeler geliştirmekteyim. Aktif iş arayışındayım ve kendimi yazılım konusunda daha da geliştirmek
                         istiyorum. Takım çalışmalarına kolaylıkla adapte olabileceğime inanıyorum ve backend kısmında kendime güveniyorum.
                     </div>
-                    <div class="link-btn"><a href="about.html" class="btn-style-two">Learn More <span class="fa fa-long-arrow-right"></span></a></div>
+                    <div class="link-btn"><a href="about.html" class="btn-style-two"> Daha Fazla Oku <span class="fa fa-long-arrow-right"></span></a></div>
                 </div>
             </div>
         </div>
