--- a/AleynaBlog/Views/Home/Blog.cshtml
+++ b/AleynaBlog/Views/Home/Blog.cshtml
@@ -19,7 +19,7 @@
                                 Consectetur adipiscing elit. Curabitur libero enim, lacinia finibus ante et, imperdiet finibus risus.
                             </div>
                             <div class="link-btn2 center">
-                                <a href="blog-details.html" class="btn-style-two">Read More</a>
+                                <a href="blog-details.html" class="btn-style-two">Hepsini Oku</a>
                             </div>
                         </div>
                     </div>
