--- a/AleynaBlog/Views/Home/Info.cshtml
+++ b/AleynaBlog/Views/Home/Info.cshtml
@@ -5,7 +5,7 @@
             <div class="column icon-column col-md-4 col-sm-6 col-xs-12">
                 <div class="inner-box">
                     <div class="icon"><span class="flaticon-technology"></span></div>
-                    <h3>Call me  +01 123 456 789</h3>
+                    <h3>Beni arayın  0(544) 503 86 39</h3>
                     <div class="text">1010 Berkler ave, Brooklyn, New York City, NY 10018 US</div>
                 </div>
             </div>
@@ -21,7 +21,7 @@
             <!--Link Column-->
             <div class="column link-column col-md-4 col-sm-6 col-xs-12">
                 <div class="link-btn5">
-                    <a href="contact.html" class="btn-style-two">Contact us</a>
+                    <a href="contact.html" class="btn-style-two">İletişim</a>
                 </div>
             </div>
 
