--- a/AleynaBlog/Views/Shared/_LayoutPage1.cshtml
+++ b/AleynaBlog/Views/Shared/_LayoutPage1.cshtml
@@ -25,11 +25,10 @@
                         <li><i class="flaticon-envelope"></i>aleynakarabacakoglu@gmail.com</li>
                     </ul>
                     <ul class="social-style-one float_right hidden-xs">
-                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                        <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                        <li><a href="#"><i class="fa fa-skype"></i></a></li>
+                        <li><a href="https://www.facebook.com/aleyna.karabacakoglu.1"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="https://twitter.com/aleynkrbck"><i class="fa fa-twitter"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/aleyna-k-a90b5a189/"><i class="fa fa-linkedin"></i></a></li>
+                        <li><a href="live:.cid.f3d92c852baf4365"><i class="fa fa-skype"></i></a></li>
                     </ul>
                 </div>
             </div>
@@ -92,7 +91,7 @@
                                 <ul class="mobile-menu clearfix">
 
                                     <li class="dropdown">
-                                        <a href="index.html">Anasayfa</a>
+                                        <a href="@Url.Action("Index","Home")">Anasayfa</a>
                                         
                                     </li>
 
