--- a/AleynaBlog/Views/Blog/Index.cshtml
+++ b/AleynaBlog/Views/Blog/Index.cshtml
@@ -72,7 +72,7 @@
                                             Consectetur adipiscing elit. Curabitur libero enim, lacinia finibus ante et, imperdiet finibus risus.
                                         </div>
                                         <div class="link-btn2 center">
-                                            <a href="blog-details.html" class="btn-style-two">Read More</a>
+                                            <a href="blog-details.html" class="btn-style-two">Daha Fazla Oku</a>
                                         </div>
                                     </div>
                                 </div>
@@ -93,7 +93,7 @@
                                             Consectetur adipiscing elit. Curabitur libero enim, lacinia finibus ante et, imperdiet finibus risus.
                                         </div>
                                         <div class="link-btn2 center">
-                                            <a href="blog-details.html" class="btn-style-two">Read More</a>
+                                            <a href="blog-details.html" class="btn-style-two">Daha Fazla Oku</a>
                                         </div>
                                     </div>
                                 </div>
