--- a/AleynaBlog/Views/Contact/Index.cshtml
+++ b/AleynaBlog/Views/Contact/Index.cshtml
@@ -40,33 +40,33 @@
                             <div class="col-md-6 col-sm-6 col-xs-12">
 
                                 <div class="form-group">
-                                    <input type="text" name="form_name" class="form-control" value="" placeholder="Your Name *" required="" aria-required="true">
+                                    <input type="text" name="form_name" class="form-control" value="" placeholder="İsim - Soyisim *" required="" aria-required="true">
                                 </div>
                             </div>
                             <div class="col-md-6 col-sm-6 col-xs-12">
                                 <div class="form-group">
-                                    <input type="email" name="form_email" class="form-control required email" value="" placeholder="Your Mail *" required="" aria-required="true">
+                                    <input type="email" name="form_email" class="form-control required email" value="" placeholder="Mail Adresi " required="" aria-required="true">
                                 </div>
                             </div>
                             <div class="col-md-6 col-sm-6 col-xs-12">
                                 <div class="form-group">
-                                    <input type="text" name="form_phone" class="form-control" value="" placeholder="Phone">
+                                    <input type="text" name="form_phone" class="form-control" value="" placeholder="Numara">
                                 </div>
                             </div>
                             <div class="col-md-6 col-sm-6 col-xs-12">
                                 <div class="form-group">
-                                    <input type="text" name="form_subject" class="form-control" value="" placeholder="Subject">
+                                    <input type="text" name="form_subject" class="form-control" value="" placeholder="Konu">
                                 </div>
                             </div>
                             <div class="col-md-12 col-sm-12 col-xs-12">
                                 <div class="form-group">
-                                    <textarea name="form_message" class="form-control textarea required" placeholder="Your Message...." aria-required="true"></textarea>
+                                    <textarea name="form_message" class="form-control textarea required" placeholder="Mesajınız...." aria-required="true"></textarea>
                                 </div>
                             </div>
                             <div class="col-md-12 col-sm-12 col-xs-12">
                                 <div class="form-group">
                                     <input id="form_botcheck" name="form_botcheck" class="form-control" type="hidden" value="">
-                                    <button class="btn-style-one" type="submit" data-loading-text="Please wait...">send message</button>
+                                    <button class="btn-style-one" type="submit" data-loading-text="Please wait...">Mesaj Gönder</button>
                                 </div>
                             </div>
 
@@ -90,7 +90,7 @@
                                     <i class="fa fa-map-marker"></i>
                                 </div><!-- /.icon-box -->
                                 <div class="text-box">
-                                    <p><b>Address:</b> <br> 121 Rain St, Melbourne 3000, Australia.</p>
+                                    <p><b>Adres:</b> <br>Konaklar Mahallesi Öğrt. Ömer Çebi Caddesi, Serhat Sk. No:5, 61100 Merkez/Trabzon</p>
                                 </div><!-- /.text-box -->
                             </li>
                             <li>
@@ -98,7 +98,7 @@
                                     <i class="fa fa-phone"></i>
                                 </div><!-- /.icon-box -->
                                 <div class="text-box">
-                                    <p><b>Call Us:</b> <br> 0(544)503 86 39</p>
+                                    <p><b>İletişim Numarası:</b> <br> 0(544)503 86 39</p>
                                 </div><!-- /.text-box -->
                             </li>
                             <li>
