--- a/AleynaBlog/Views/Project/Index.cshtml
+++ b/AleynaBlog/Views/Project/Index.cshtml
@@ -7,7 +7,7 @@
 <div class="inner-banner has-base-color-overlay text-center" style="background: url(/Content/Site/images/background/1.jpg);">
     <div class="container">
         <div class="box">
-            <h3>service details</h3>
+            <h3>Projelerim</h3>
         </div><!-- /.box -->
     </div><!-- /.container -->
 </div>
@@ -36,10 +36,7 @@
 
                 <div class="service-sidebar">
                     <ul class="service-catergory">
-                        <li id="software" class="active" style="cursor:pointer"><a>Yazılım projeleri</a> <span class="view-all-icon fa fa-caret-right"></span></li>
-                        <li id="human" style="cursor:pointer"><a>İnsan Kaynakları Projeleri</a><span class="view-all-icon fa fa-caret-right"></span></li>
-                        <li id="finance" style="cursor:pointer"><a>Finans Projeleri</a><span class="view-all-icon fa fa-caret-right"></span></li>
-
+                        <li id="software" class="active" style="cursor:pointer"><a>Yazılım projeleri</a> <span class="view-all-icon fa fa-caret-right"></span></li>                      
                     </ul>
                     <br>
                     <br>
