--- a/AleynaBlog/Views/Shared/_LayoutPage1.cshtml
+++ b/AleynaBlog/Views/Shared/_LayoutPage1.cshtml
@@ -153,42 +153,18 @@
                                 <!--Footer Column-->
                                 <div class="footer-column col-md-6 col-sm-6 col-xs-12">
                                     <div class="footer-widget about-widget">
-                                        <figure class="footer-logo"><a href="index.html"><img src="~/Content/Site/images/logo/logo2.png" alt=""></a></figure>
+                                        <figure class="footer-logo"><a href="index.html"><img src="~/Content/Site/images/logo/logo3.png" alt=""></a></figure>
 
                                         <div class="widget-content">
-                                            <div class="text"><p>Narail is a global consulting firm with a twist. We bring big ideas and challenge the norm. We work with our clients, not at them.</p> </div>
-
-                                            <ul class="social">
-                                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-skype"></i></a></li>
+                                           
+                                            <ul class="social">                                              
+                                                <li><a href="https://www.facebook.com/aleyna.karabacakoglu.1"><i class="fa fa-facebook"></i></a></li>
+                                                <li><a href="https://twitter.com/aleynkrbck"><i class="fa fa-twitter"></i></a></li>
+                                                <li><a href="https://www.linkedin.com/in/aleyna-k-a90b5a189/"><i class="fa fa-linkedin"></i></a></li>   
                                             </ul>
                                         </div>
                                     </div>
                                 </div>
-
-                                <!--Footer Column-->
-                                <div class="footer-column col-md-6 col-sm-6 col-xs-12">
-                                    <div class="footer-widget service-widget">
-                                        <div class="section-title">
-                                            <h3>Our Services</h3>
-                                        </div>
-                                        <div class="widget-content">
-                                            <ul class="list">
-                                                <li><a href="service-single.html">Business Growth</a></li>
-                                                <li><a href="service-single.html">Market Research</a></li>
-                                                <li><a href="service-single.html">Financial Advise</a></li>
-                                                <li><a href="service-single.html">Sales & Trading</a></li>
-                                                <li><a href="service-single.html">Consulting</a></li>
-                                                <li><a href="service-single.html">Risk Management</a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-
-                                </div>
-
                             </div>
                         </div>
 
