--- a/AleynaBlog/Views/Home/Info.cshtml
+++ b/AleynaBlog/Views/Home/Info.cshtml
@@ -6,22 +6,14 @@
                 <div class="inner-box">
                     <div class="icon"><span class="flaticon-technology"></span></div>
                     <h3>Beni arayın  0(544) 503 86 39</h3>
-                    <div class="text">1010 Berkler ave, Brooklyn, New York City, NY 10018 US</div>
+                    <div class="text">Konaklar Mahallesi Öğrt. Ömer Çebi Caddesi, Serhat Sk. No:5, 61100 Merkez/Trabzon</div>
                 </div>
             </div>
-            <!--Icon Column-->
-            <div class="column icon-column col-md-4 col-sm-6 col-xs-12">
-                <div class="inner-box">
-                    <div class="icon"><span class="flaticon-circular-clock-tool"></span></div>
-                    <h3>Opening Hours</h3>
-                    <div class="text">Mon- Sat 5:00 AM - 12:00 PM / Sundays closed</div>
-                </div>
-            </div>
-
-            <!--Link Column-->
+            
+            <!--İletisim-->
             <div class="column link-column col-md-4 col-sm-6 col-xs-12">
                 <div class="link-btn5">
-                    <a href="contact.html" class="btn-style-two">İletişim</a>
+                    <a href="@Url.Action("Index","Contact")" class="btn-style-two">İletişim</a>
                 </div>
             </div>
 
@@ -29,48 +21,4 @@
     </div>
 </section>
 <!--Services Two-->
-<section class="services-two bg-1 padd-3">
-    <div class="container">
-        <div class="row clearfix">
 
-            <!--Default Service Block-->
-            <div class="default-service-block active col-md-4 col-sm-6 col-xs-12">
-                <div class="inner-box">
-                    <div class="icon"><span class="flaticon-graphic-3"></span></div>
-                    <h3><a href="#">Business Growth</a></h3>
-                    <div class="text">Consectetur adipiscing elit. Curabitur libero enim, lacinia finibus ante et, imperdiet finibus risus.</div>
-
-                    <div class="link-btn">
-                        <a href="#" class="btn-style-three dark">Read More</a>
-                    </div>
-                </div>
-            </div>
-
-
-            <!--Default Service Block / Active-->
-            <div class="default-service-block active col-md-4 col-sm-6 col-xs-12">
-                <div class="inner-box wow zoomIn" data-wow-delay="0ms" data-wow-duration="1500ms">
-                    <div class="icon"><span class="flaticon-people"></span></div>
-                    <h3><a href="#">24 Hours Online Support</a></h3>
-                    <div class="text">Consectetur adipiscing elit. Curabitur libero enim, lacinia finibus ante et, imperdiet finibus risus.</div>
-                    <div class="link-btn">
-                        <a href="#" class="btn-style-three dark">Read More</a>
-                    </div>
-                </div>
-            </div>
-
-            <!--Default Service Block-->
-            <div class="default-service-block active col-md-4 col-sm-6 col-xs-12">
-                <div class="inner-box">
-                    <div class="icon"><span class="flaticon-layers"></span></div>
-                    <h3><a href="#">Business Strategy</a></h3>
-                    <div class="text">Consectetur adipiscing elit. Curabitur libero enim, lacinia finibus ante et, imperdiet finibus risus.</div>
-                    <div class="link-btn">
-                        <a href="#" class="btn-style-three dark">Read More</a>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-    </div>
-</section>
