--- a/AleynaBlog/Views/Home/Slider.cshtml
+++ b/AleynaBlog/Views/Home/Slider.cshtml
@@ -17,8 +17,8 @@
                      data-responsive_offset="on"
                      data-start="700">
                     <div class="slide-content-box">
-                        <h1>We help businesses <br>innovate and grow.</h1>
-                        <p>With over 10 years of experience helping businesses to find <br> comprehensive solutions. </p>
+                        <h1>Kişisel Blok </h1>
+                       
                     </div>
                 </div>
                 <div class="tp-caption tp-resizeme"
@@ -33,7 +33,7 @@
                      data-start="2300">
                     <div class="slide-content-box">
                         <div class="button">
-                            <a class="btn-style-five" href="about.html">About Us</a>
+                            <a class="btn-style-five" href="@Url.Action("Index","About")">Hakkımda</a>
                         </div>
                     </div>
                 </div>
@@ -49,7 +49,7 @@
                      data-start="2600">
                     <div class="slide-content-box">
                         <div class="button">
-                            <a class="btn-style-six" href="contact.html">contact us</a>
+                            <a class="btn-style-six" href="@Url.Action("Index","Contact")">İletişim</a>
                         </div>
                     </div>
                 </div>
@@ -69,8 +69,8 @@
                      data-responsive_offset="on"
                      data-start="700">
                     <div class="slide-content-box">
-                        <h1>We help businesses <br>innovate and grow.</h1>
-                        <p>With over 10 years of experience helping businesses to find <br> comprehensive solutions. </p>
+                        
+                        <p>Siz de Makale Ekleyip paylaşımda bulunabilirsiniz. </p>
                     </div>
                 </div>
                 <div class="tp-caption tp-resizeme"
