--- a/AleynaBlog/Views/Contact/Index.cshtml
+++ b/AleynaBlog/Views/Contact/Index.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model IEnumerable<AleynaBlog.Models.Contact>
+@using AleynaBlog.Models
 @{
 
     Layout = "~/Views/Shared/_LayoutPage1.cshtml";
@@ -30,56 +31,13 @@
 <section class="contact_us">
     <div class="container">
         <div class="row">
-            <div class="col-md-8 col-sm-12 col-xs-12">
-                <div class="sec-title">
-                    <h2>Mesaj Yazın</h2>
-                </div>
-                <div class="default-form-area">
-                    <form id="contact-form" name="contact_form" class="default-form" action="inc/sendmail.php" method="post" novalidate="novalidate">
-                        <div class="row clearfix">
-                            <div class="col-md-6 col-sm-6 col-xs-12">
-
-                                <div class="form-group">
-                                    <input type="text" name="form_name" class="form-control" value="" placeholder="İsim - Soyisim *" required="" aria-required="true">
-                                </div>
-                            </div>
-                            <div class="col-md-6 col-sm-6 col-xs-12">
-                                <div class="form-group">
-                                    <input type="email" name="form_email" class="form-control required email" value="" placeholder="Mail Adresi " required="" aria-required="true">
-                                </div>
-                            </div>
-                            <div class="col-md-6 col-sm-6 col-xs-12">
-                                <div class="form-group">
-                                    <input type="text" name="form_phone" class="form-control" value="" placeholder="Numara">
-                                </div>
-                            </div>
-                            <div class="col-md-6 col-sm-6 col-xs-12">
-                                <div class="form-group">
-                                    <input type="text" name="form_subject" class="form-control" value="" placeholder="Konu">
-                                </div>
-                            </div>
-                            <div class="col-md-12 col-sm-12 col-xs-12">
-                                <div class="form-group">
-                                    <textarea name="form_message" class="form-control textarea required" placeholder="Mesajınız...." aria-required="true"></textarea>
-                                </div>
-                            </div>
-                            <div class="col-md-12 col-sm-12 col-xs-12">
-                                <div class="form-group">
-                                    <input id="form_botcheck" name="form_botcheck" class="form-control" type="hidden" value="">
-                                    <button class="btn-style-one" type="submit" data-loading-text="Please wait...">Mesaj Gönder</button>
-                                </div>
-                            </div>
-
-                        </div>
-                    </form>
-                </div>
-            </div>
+            @Html.Action("createMessage", "Contact")
 
             <div class="col-md-4 col-sm-8 col-xs-12">
                 <div class="sec-title">
                     <h2>İletişim Bilgilerimiz</h2>
                 </div>
-               
+
                 <br>
                 <div class="default-cinfo">
 
@@ -107,7 +65,7 @@
                                 </div><!-- /.icon-box -->
                                 <div class="text-box">
                                     <p><b>Mail:</b> <br> <a href="mailto:aleynakarabacakoglu26@hotmail.com">aleynakarabacakoglu26@hotmail.com</a></p>
-                                    
+
                                 </div>
                             </li>
                         </ul>
@@ -120,8 +78,8 @@
 </section>
 
 @*<div class="map-section">
-    <div class="map-outer">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3172.5674809702114!2d40.70955591515388!3d37.329071745449816!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x400a8f3bd30a5b41%3A0x72f950f7ee817079!2sSahra+Gelinlik!5e0!3m2!1str!2str!4v1534158187601" width="100" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-    </div>
-</div>*@
+        <div class="map-outer">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3172.5674809702114!2d40.70955591515388!3d37.329071745449816!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x400a8f3bd30a5b41%3A0x72f950f7ee817079!2sSahra+Gelinlik!5e0!3m2!1str!2str!4v1534158187601" width="100" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
+    </div>*@
 
