--- a/AleynaBlog/Views/Blog/Tag.cshtml
+++ b/AleynaBlog/Views/Blog/Tag.cshtml
@@ -2,7 +2,7 @@
 
 <div class="sidebar_tags sidebar-padd mar-1">
     <div class="inner-title">
-        <h3>Etiketler</h3>
+        <h3>#Etiketler</h3>
     </div>
     <ul>
         @foreach (Tag tag in ViewBag.etiketlerim)
