--- a/AleynaBlog/Views/Blog/Category.cshtml
+++ b/AleynaBlog/Views/Blog/Category.cshtml
@@ -1,8 +1,15 @@
-﻿<div class="category-style-one sidebar-padd mar-1">
+﻿@using AleynaBlog.Models;
+
+<div class="category-style-one sidebar-padd mar-1">
     <div class="inner-title">
         <h3>Kategoriler</h3>
     </div>
     <ul class="list">
-        <li><a href="#" class="clearfix"><span class="float_left">Business Growth </span><span class="float_right">(8)</span></a></li>
+        @foreach (Category kategori in ViewBag.kategorilerim)
+        {
+            <li><a href="#" class="clearfix"><span class="float_left">@kategori.Name </span><span class="float_right">(8)</span></a></li>
+
+        }
+
     </ul>
 </div> <!-- End of .sidebar_categories -->
