--- a/AleynaBlog/Views/Blog/Index.cshtml
+++ b/AleynaBlog/Views/Blog/Index.cshtml
@@ -7,7 +7,7 @@
 <div class="inner-banner has-base-color-overlay text-center" style="background: url(/Content/Site/images/background/1.jpg);">
     <div class="container">
         <div class="box">
-            <h3>News grid view</h3>
+            <h3>Makaleler</h3>
         </div><!-- /.box -->
     </div><!-- /.container -->
 </div>
@@ -15,15 +15,13 @@
     <div class="container">
         <div class="pull-left">
             <ul class="list-inline link-list">
+                @*<li>
+                    <a href="@Url.Action("Index","Home")">Anasayfa</a>
+                </li>*@
                 <li>
-                    <a href="index.html">Home</a>
+                    <a href="#">Makale Oluştur</a>
                 </li>
-                <li>
-                    <a href="#">news</a>
-                </li>
-                <li>
-                    news grid view
-                </li>
+                
             </ul><!-- /.list-line -->
         </div><!-- /.pull-left -->
         <div class="pull-right">
@@ -52,7 +50,7 @@
                                             Consectetur adipiscing elit. Curabitur libero enim, lacinia finibus ante et, imperdiet finibus risus.
                                         </div>
                                         <div class="link-btn2 center">
-                                            <a href="blog-details.html" class="btn-style-two">Read More</a>
+                                            <a href="blog-details.html" class="btn-style-two">Daha fazla Oku</a>
                                         </div>
                                     </div>
                                 </div>
